# CMPE320

./: Menu Flowchart  README.md  Untitled Diagram.drawio
Assignment1/: CMakeLists.txt  TestInsultGenerator.cpp  insultgenerator_20hgww.cpp  insultgenerator_20hgww.h
Assignment2/: CMakeLists.txt  FractionTest.cpp  fraction_20hgww.cpp  fraction_20hgww.h
Assignment3/: CMakeLists.txt  JumblePuzzle.cpp  JumblePuzzle.h  testJumble.cpp
Assignment4/: CMakeLists.txt  ShapesBad.cpp  ShapesBad.h  ShapesGood.cpp  ShapesGood.h  TestGoodShapes.cpp
untitled/: main.cpp
