cmake_minimum_required(VERSION 3.23)
project(Assignment4)

set(CMAKE_CXX_STANDARD 17)

add_executable(Assignment4 TestGoodShapes.cpp ShapesGood.cpp ShapesGood.h)

#cmake_minimum_required(VERSION 3.23)
#project(Assignment4)
#
#set(CMAKE_CXX_STANDARD 17)
#
#add_executable(Assignment4 TestBadShapes.cpp ShapesBad.cpp ShapesBad.h)
